# Proyecto-I-ADA-II

./: .gitignore  CMakeLists.txt  F1.txt  F2.txt  F3.txt  F4.txt  F5.txt  F6.txt  Makefile  README.md  analisis_voraz.md  detener_proyecto  detener_proyecto.bat  detener_proyecto.ps1  iniciar_proyecto  iniciar_proyecto.bat  iniciar_proyecto.ps1  prueba  prueba.cpp  riego_interfaz_frontend.html  run_benchmark.py  salida_riego_roFB.txt
assets/css/: base.css  components.css  layout.css  responsive.css  tokens.css
assets/js/: app.js
assets/js/config/: app-config.js
assets/js/core/: state.js
assets/js/services/: api-client.js  export-service.js  file-parser.js
assets/js/ui/: benchmark-screen.js  config-screen.js  (+2 more)
backend/: README.md
backend/include/: README.md  algoritmos.hpp  benchmark_engine.hpp  domain_types.hpp  http_server.hpp  json_utils.hpp  placeholder_engine.hpp  voraz_criterios.hpp
backend/scripts/: supervisar_backend.sh
backend/src/: README.md  algoritmos.cpp  benchmark_engine.cpp  http_server.cpp  json_utils.cpp  main.cpp  placeholder_engine.cpp  voraz_criterios.cpp
backend/tests/: README.md  compare_voraz_modes.cpp
bateria_pruebas/: generar_tests_aleatorios.py
bateria_pruebas/Tests/: tests_aleatorios_5_27_README.md  tests_aleatorios_por_n_5_27_README.md
docs/: arquitectura-proyecto.md  informe_proyecto_riego.tex
docs/informe/: informe_proyecto_riego.tex
docs/informe2/: informe_proyecto_riego (1).tex
docs/informe3/: informe_proyecto(2).tex  informe_proyecto_riego_actualizado.tex
docs/presentacion/: presentacion_riego.tex
(+30 files in other folders)
